syntax = "proto3";
package pluck;

option go_package = "github.com/ml444/gkit/cmd/protoc-gen-go-http/pluck";

import "google/protobuf/descriptor.proto";
import "pluck/headers.proto";

extend google.protobuf.MethodOptions {
    // option (pluck.request) = {
    //      headers_to: "header"
    //      body_to: "file"
    // };
    optional PluckRequest request = 1301;
    // option (pluck.response) = {
    //      headers_from: "header"
    //      body_from: "file"
    // };
    optional PluckResponse response = 1302;
}

// Example:
//
//     service uploadAndDownload {
//       rpc Upload(UploadReq) returns (UploadRsp) {
//         option (google.api.http) = {
//           post: "/v1/upload/{filename}"
//           body: "*"
//         };
//         option (pluck.request) = {
//             headers_to: "headers"
//             body_to: "file"
//         };
//       };
//       rpc Download(DownloadReq) returns (DownloadRsp) {
//         option (google.api.http) = {
//           post: "/v1/download/{filename}"
//           body: "*"
//         };
//         option (pluck.response) = {
//             headers_from: "headers"
//             body_from: "file"
//         };
//       };
//     }
//     message UploadReq {
//       string filename = 1;               // Mapped to filename.
//       map<string, string> headers = 2;   // pluck request.Header to this field.
//       bytes file = 3;                    // pluck request.Body to this field.
//     }
//     message UploadRsp {
//       string url = 1; // The resource url.
//     }
//     message DownloadReq {
//       string filename = 1; // Mapped to filename.
//     }
//     message DownloadRsp {
//       map<string, string> headers = 2;   // pluck this field to response.Header
//       bytes file = 3;                    // pluck this field to response.Body
//     }


message PluckRequest {
    RequestHeaders default_headers = 1;
    string headers_to = 2;
    string body_to = 3;
}

message PluckResponse {
    ResponseHeaders default_headers = 1;
    string headers_from = 2;
    string body_from = 3;
}




